--- a/src/index.css
+++ b/src/index.css
@@ -7,16 +7,14 @@ html {
 }
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu",
+    "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
 }
 
 .right {
@@ -30,7 +28,8 @@ code {
 }
 #chat {
   max-height: calc(100vh - 128px);
-  overflow-y: scroll; 
+  overflow-y: scroll;
+  margin-bottom: 20px;
 }
 
 #chat::-webkit-scrollbar {
@@ -39,6 +38,6 @@ code {
 
 /* Hide scrollbar for IE, Edge and Firefox */
 #chat {
--ms-overflow-style: none;  /* IE and Edge */
-scrollbar-width: none;  /* Firefox */
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
 }
